--- a/pages/page18.html
+++ b/pages/page18.html
@@ -62,9 +62,9 @@
                         <p>MI VOCABULARIO</p>
                     </div>
                     <div class="box-body">
-                        <h5>LA CONVIVENCIA <br><span style="font-style: italic;">living together</span></h5>
-                        <p><br>
-                            la comunid<strong>a</strong>d de vec <strong>i</strong>nos<br>
+                        <h5>LA CONVIVENCIA </h5>
+                        <p><span style="font-style: italic;">living together</span><br>
+                            la comunid<strong>a</strong>d de vec<strong>i</strong>nos<br>
                             <span style="font-style: italic;">resident association</span><br>
                             el vec<strong>i</strong><span style="font-style: italic;">no neighbor</span><br>
                             ayud<strong>a</strong>r <span style="font-style: italic;">to help</span><br>
@@ -75,9 +75,9 @@
                             hac<strong>e</strong>r ru<strong>i</strong>do <span style="font-style: italic;">to make
                                 noise</span><br>
                             manten<strong>e</strong>r (ie) l<strong>i</strong>mpio <span
-                                style="color: #9E1981;">≠</span> ensuci<strong>a</strong>r<span
+                                style="color: #9E1981;"><strong>≠</strong></span> ensuci<strong>a</strong>r<span
                                 style="font-style: italic;">
-                                to keep clean</span> <span style="color: #9E1981;">≠</span><span
+                                to keep clean</span> <span style="color: #9E1981;"><strong>≠</strong></span><span
                                 style="font-style: italic;">to get dirty</span><br>
                             molest<strong>a</strong>r <span style="font-style: italic;">to disturb</span><br>
                             tir<strong>a</strong>r la bas<strong>u</strong>ra en el
@@ -123,7 +123,7 @@
                     convivencia</p>
                 <p>entre tus compañeros de clase.</p>
 
-                <ol type="1">
+                <ol type="1" id="ol_items">
                     <li><textarea class="blue-box2"></textarea></li>
                     <li><textarea class="blue-box2"></textarea></li>
                     <li><textarea class="blue-box2"></textarea></li>
