--- a/pages/page19.html
+++ b/pages/page19.html
@@ -16,10 +16,10 @@
     <div class="container-fluid" id="header-container">
         <div class="row text-white align-items-center px-5 py-4">
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 col-xl-6">
-                <div class="header-title">FICHAS DE DIFERENCIACIÓN</div>
+                <div class="header-title"><strong>FICHAS DE DIFERENCIACIÓN</strong></div>
             </div>
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 col-xl-6 text-md-start">
-                <div class="fitch-title">FICHA 4 · OPCIÓN A</div>
+                <div class="fitch-title"><strong>FICHA 4 · OPCIÓN A</strong></div>
             </div>
         </div>
         <!-- Unit Banner in top-right -->
@@ -58,10 +58,10 @@
                 </div>
                 <div class="activity3a mt-3">
                     <p><span class="activity3a-label">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                 class="bi bi-people-fill" viewBox="0 0 16 16">
                                 <path
-                                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+                                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" /> -->
                             </svg> A.</span> <strong>Imagina</strong> que eres un/a vecino/a de esta comunidad. <br>
                         ¿Cómo puedes ayudar a las personas de las imágenes?<br>
                         <strong>Completa</strong> las oraciones con un indirect object pronoun<br>
@@ -108,7 +108,7 @@
                             tra<strong>e</strong>r to bring
                         </p>
                         <hr class="dotted-line1">
-                        <p class="para1">VOCABULARIO <strong class="section-title">p.
+                        <p class="para1">VOCABULARIO <strong class="section-title1">P.
                                 51</strong></p>
                     </div>
                 </div>
