page15,16 changes done

--- a/pages/page15.html
+++ b/pages/page15.html
@@ -76,7 +76,7 @@
                     <div class="list">
                         <div class="numbers">
                             <p>2</p>
-                        </div><span> Hay que <strong>mantener limpios los espacios comunes:</strong> : las 
+                        </div><span> Hay que <strong>mantener limpios los espacios comunes:</strong> : las
                             escaleras, las paredes, el ascensor… </span>
                     </div>
                     <hr />
@@ -98,14 +98,15 @@
                             relación.</span>
                     </div>
                     <hr />
-                    <p><span style="color: #277684;"><strong>1</strong></span> scream <span style="color: #277684;"><strong>2</strong></span>
+                    <p><span style="color: #277684;"><strong>1</strong></span> scream <span
+                            style="color: #277684;"><strong>2</strong></span>
                         noisy household appliances</p>
                 </div>
 
                 <!-- Source -->
                 <div class="arrow-mark-text mt-4 text-end">
-                    <p style="font-weight: 50;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                            fill="green" class="bi bi-arrow-up" viewBox="0 0 16 16">
+                    <p style="font-weight: 50;     margin-right: 100px;"><svg xmlns="http://www.w3.org/2000/svg"
+                            width="16" height="16" fill="green" class="bi bi-arrow-up" viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
                                 d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5" />
                         </svg>
@@ -177,7 +178,7 @@
                         garbage away in the dumpster
                         <hr />
                         <p class="text-center"
-                            style="color: #9e1880; text-align: right;margin-left: 20px;font-size: 15px;">VOCABULARIO p.
+                            style="color: #9e1880; text-align: right;margin-left: 6px;font-size: 15px;">VOCABULARIO p.
                             50</p>
                     </div>
                 </div>
@@ -188,8 +189,9 @@
                     </div>
                     <div class="box-body p-3" style="background-color: #cbdadd;">
                         <span class="fw-bold" style="color: #277684;">OBLIGATION WITH</span><br />
-                        <span class="fw-bold" style="color: #277684; background-color: yellow;">HAY QUE</span> +INFINITIVE<br />
-                         <strong>Hay que</strong> ser tolerante y dialogar con respeto.
+                        <span class="fw-bold" style="color: #277684; background-color: yellow;">HAY QUE</span>
+                        +INFINITIVE<br />
+                        <strong>Hay que</strong> ser tolerante y dialogar con respeto.
                         <hr>
                     </div>
                     <p class="text p-2"
